syntax = "proto3";

option go_package = "/proto;helloworld";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

import "proto/google/api/annotations.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/echo"
      body: "*"
    };
  };
  rpc deleteCosmetic (deleteCosmeticRequest) returns (deleteCosmeticReply) {
    option (google.api.http) = {
      delete: "/cosmetic"
      body: "*"
    };
  };
  rpc updateCosmetic (updateCosmeticRequest) returns (updateCosmeticReply) {
    option (google.api.http) = {
      put: "/cosmetic"
      body: "*"
    };
  };
  rpc createCosmetic (createCosmeticRequest) returns (createCosmeticResponse) {
    option (google.api.http) = {
      post: "/cosmetic"
      body: "*"
    };
  };
  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply);
  rpc ListCosmetics (ListCosmeticsRequest) returns (ListCosmeticsResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1; // 고유번호가 할당되고 이 번호가 바뀌면 업데이트 해야한다.
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message ListCosmeticsRequest {
}

message Cosmetics {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
}

message ListCosmeticsResponse {
  repeated Cosmetics data = 1;
}

message createCosmeticRequest {
  string name = 1;
  string description = 2;
  int32 price = 3;
}

message createCosmeticResponse {
  string message = 1;
}

message deleteCosmeticRequest {
  string uuid = 1;
}

message deleteCosmeticReply {
  string message = 1;
}

message updateCosmeticRequest {
  string uuid = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
}

message updateCosmeticReply {
  string uuid = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
}
